--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 </head>
 
 <body>
-  <audio id="bg-music" src="https://file-examples.com/storage/fe623f143c64070c215b244/2017/11/file_example_MP3_700KB.mp3" autoplay loop></audio>
+  <audio id="bg-music" src="https://files.catbox.moe/irf66d.mp3" autoplay loop></audio>
   <div id="particles-js"></div>
   <header class="text-center">
     <h1>WANZOFC TECH</h1>
-    <p>Interactive API Demo</p>
+    <p>HANYA GABUT</p>
   </header>
 
   <main class="container">
@@ -189,9 +189,9 @@
           <ul>
             <li>
               <a href="#" data-endpoint="/api/stalk/github?user=octocat">
-                <i class="fab fa-github"></i> Get GitHub User (octocat)
+                <i class="fab fa-github"></i> Get GitHub User (wanzbrayy)
               </a>
-              <button class="try-it-button btn btn-primary" data-endpoint="/api/stalk/github?user=octocat">
+              <button class="try-it-button btn btn-primary" data-endpoint="/api/stalk/github?user=wanzbrayy">
                 <i class="fas fa-flask"></i> Try It
               </button>
             </li>
@@ -218,7 +218,7 @@
   </main>
 
   <footer>
-    © 2024 WANZOFC TECH
+     WANZOFC TECH
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
